--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: KayBeSee
 github_username:  KayBeSee
+google_analytics: UA-11402153-6
 
 # Build settings
 markdown: kramdown
